Backported to java 11 as android does not support java 17 (yet?)