@@ -1,6 +1,7 @@
 package speevy.cardGames;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Component;
 
@@ -12,7 +13,7 @@ public class AmericanCards implements Cards {
 		return Arrays.stream(AmericanCardSuit.values())
 				.flatMap(suit -> Arrays.stream(AmericanCardRank.values())
 						.map(rank-> new Card(suit, rank)))
-				.toList();
+				.collect(Collectors.toList());
 	}
 
 }
